Simplify, format
